--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@
 
 :root {
     --primary-color: #EB1E25; /* Red */
-    --secondary-color: #ff4500; /* OrangeRed */
+    --secondary-color: #5e5e5e; /* OrangeRed */
     --background-color: #f4f4f4;
     --text-color: #333;
     --white: #ffffff;
