--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<div class="footer-wrapper">
+    <div class="main-container">
+        <footer>© 2025 IT Academy Step All; Rights Reserved</footer>
+    </div>
+</div>
