--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -188,11 +188,11 @@
     .icon-wrapper:hover {
         background-color: var(--primary-color);
         transition: background-color 0.3s ease-in-out;
-        color: var(--white);     
+        color: var(--white); 
     }
     .icon-wrapper:hover i {
-        transform: scale(1.2);
-        transition: transform 0.3s ease-in-out;
+
+        animation: rotate 0.5s ease-in-out;
     }
 }
 
@@ -218,6 +218,14 @@
 
 @keyframes spin {
     to { transform: rotate(360deg); }
+}
+
+@keyframes rotate {
+    0% { transform: rotate(0deg); }
+    25% { transform: rotate(25deg); }
+    50% { transform: rotate(-25deg); }
+    75% { transform: rotate(10deg); }
+    100% { transform: rotate(0deg); }
 }
 
 
