--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -11,8 +10,8 @@
 }
 
 :root {
-    --primary-color: #EB1E25; /* Red */
-    --secondary-color: #5e5e5e; /* OrangeRed */
+    --primary-color: #EB1E25;
+    --secondary-color: #5e5e5e;
     --background-color: #f4f4f4;
     --text-color: #333;
     --white: #ffffff;
@@ -52,7 +51,3 @@
         max-width: 1320px;
     }
 }
-
-
-
-
