feat: add GetRoom component and integrate room details view
- Added GetRoomComponent to display room details based on room ID.
- Integrated Angular Material Datepicker for date selection.
- Updated routing to include path for GetRoomComponent.
- Enhanced HomeComponent to link room cards to GetRoomComponent.
- Updated styles for GetRoomComponent and its HTML structure.
- Removed unused room ID input from RoomsComponent.
- Updated API service to fetch room details.
- Added Material Icons and Roboto font to index.html.
- Updated global styles for consistent typography.

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -20,20 +20,22 @@
 @if (topRooms.length > 0) {
     <div class="main-container">
         <div class="divider"><span>Guest Favorite Rooms</span></div>
-        <a routerLink="/rooms" style="text-decoration: none;" (click)="getRoomsData()">
             <div class="rooms-container">
-                @for (item of topRooms; track $index) {
-                    <app-hotel-room-card
-                    imageUrl="{{item.images[0].source}}"
-                    roomName="{{item.name}}"
-                    pricePerNight="{{item.pricePerNight}}"
-                    currencySymbol="₾"
-                    viewDetails="View Details"
-                    >
-                    </app-hotel-room-card>
-                }                        
+                <!-- @for (item of topRooms; track $index) { -->
+                    @for (item of topRooms; track $index) {
+                    <a href="/GetRoom/{{item.id}}">
+                        <app-hotel-room-card
+                        imageUrl="{{item.images[0].source}}"
+                        roomName="{{item.name}}"
+                        pricePerNight="{{item.pricePerNight}}"
+                        currencySymbol="₾"
+                        viewDetails="View Details"
+                        >
+                        </app-hotel-room-card>
+                    </a>
+                    }                    
+                <!-- }                         -->
             </div>
-        </a>
 
         <div class="divider"><span>USP Section</span></div>
         <div class="usp-section">
