--- a/src/app/shared/components/hotel-room-card/hotel-room-card.component.html
+++ b/src/app/shared/components/hotel-room-card/hotel-room-card.component.html
@@ -3,7 +3,7 @@
         <img [src]="imageUrl" [alt]="roomName">
         <div class="overlay">
             <div class="view-details-wrapper">
-                <a href="#" class="view-details">{{ viewDetails }}</a>
+                <div class="view-details">{{ viewDetails }}</div>
             </div>            
         </div>
     </div>
