--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -118,7 +118,9 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 2rem;
-
+    a {
+        text-decoration: none;
+    }
     @media (max-width: 576px) {
         grid-template-columns: repeat(1, 1fr);
     }
