--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,3 +51,5 @@
         max-width: 1320px;
     }
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
