feat: enhance room filtering and booking functionality with new UI components and improved styles

--- a/src/app/features/get-room/get-room.component.html
+++ b/src/app/features/get-room/get-room.component.html
@@ -43,7 +43,7 @@
                 }
                 
                 <div class="amenities-section">
-                    <div class="divider">
+                    <div class="divider additional-border">
                         <span>Room Amenities</span>
                     </div>
                     <div class="table-container">
